# xilem-log-viewer

./: Cargo.toml  LICENSE  README.md
src/: app.rs  lib.rs  log_record.rs  main.rs
