[package]
name = "log-viewer"
version = "0.1.0"
edition = "2024"
default-run = "log-viewer"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
masonry = { git = "https://github.com/linebender/xilem", branch = "prose_weight", version = "0.2.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["parsing", "serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
winit = "0.30.9"
xilem = { git = "https://github.com/linebender/xilem", branch = "prose_weight", version = "0.1.0" }
